优化：NettyHttpUtils的下载实现，让它能处理跳转